--- a/config.json
+++ b/config.json
@@ -26,7 +26,7 @@
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
   "nickNameBot": " 𝙃𝙞𝙣𝙖𝙩𝙖 🌺",
-  "prefix": "?",
+  "prefix": "!",
   "database": {
     "type": "sqlite",
     "uriMongodb": "",
