--- a/config.json
+++ b/config.json
@@ -25,7 +25,7 @@
     "whiteListIds": [],
     "notes": "if you enable this feature, only the ids in the whiteListIds section can use the bot"
   },
-  "nickNameBot": " 𝙃𝙞𝙣𝙖𝙩𝙖 🌺",
+  "nickNameBot": " 😾𝙰𝚕𝚎𝚡 🌺",
   "prefix": "!",
   "database": {
     "type": "sqlite",
